<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:minHeight="?actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@color/green"
        app:theme="@style/AppTheme.Dark" />
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/third"/>
        <EditText
            android:layout_marginLeft="5dp"
            android:id="@+id/et_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:hint="现代金控为xdjk"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/mchcode"/>
        <EditText
            android:layout_marginLeft="5dp"
            android:textSize="15sp"
            android:id="@+id/et_mchcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="跟本系统中保单里的一致"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="10sp"
            android:layout_height="wrap_content"
            android:text="@string/version"/>
        <TextView
            android:layout_marginLeft="5dp"
            android:textSize="10sp"
            android:id="@+id/et_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkgray"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_save"
            style="@style/button_main_style"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sure"/>

    </LinearLayout>



</LinearLayout>
